made small fixes on overflow

--- a/sass/BookingPage.scss
+++ b/sass/BookingPage.scss
@@ -9,7 +9,7 @@
 }
 
 .seat-picker__container {
-    min-width: 30rem;
+    min-width: 35rem;
 }
 
 .cinema.cinema {
